Add find-bug report tool